--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,15 @@
-.App {
+body {
+  margin-top:25%;
+  margin-bottom: 25%;
+  background: green;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.Appp {
   text-align: center;
+  font-family: 'Play', sans-serif;
 }
 
 
