--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  margin-top:25%;
+  margin-top:5%;
   margin-bottom: 25%;
   background: green;
   display: flex;
@@ -13,4 +13,8 @@ body {
 }
 
 
+.Videodisplay {
+  justify-content: center;
+  display: flex;
 
+}
