--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,35 @@
+
 body {
-  margin-top:5%;
-  margin-bottom: 25%;
-  background: green;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  background-color: green;
+  
+
 }
 
-.Appp {
-  text-align: center;
-  font-family: 'Play', sans-serif;
+.firstline {
+  display:flex;
 }
 
+#digitalvegan {
+  flex: 1;
+  width:200px;
+  height: 30px;
+  border: solid white;
+  font-size: 20px;
+  background-color: green;
+  
+}
 
-.Videodisplay {
-  justify-content: center;
-  display: flex;
+#learn {
+  flex: 20%;
+  flex-basis: 5;
+  background-color:black;
+  color: white;
+  font-family: 'Play', sans-serif;
 
+}
+
+#chrome {
+  flex: 20%;
+  background-color:black;
+  color: white;
 }
