--- a/src/App.css
+++ b/src/App.css
@@ -153,6 +153,8 @@ body {
   text-align: center;
   justify-content: center;
   margin: 20px;
+  background: black;
+  
 }
 
 .displayco2 {
@@ -169,7 +171,7 @@ body {
   flex-direction: row;
   justify-content: center;
   border: white;
-  margin: 10;
+  margin: 20;
 
 }
 
