--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,31 @@
 
 body {
   background-color:rgb(25, 85, 26);
-  font-family:  'Varela', sans-serif;
+  font-family: 'Arimo', sans-serif;
+}
+
+button {
+  font-family: 'Arimo', sans-serif;
 }
 
 #profilepage {
+  
   border: solid white;
 }
 #firstline {
+  
   border: solid white;
 }
 
 #video {
+  
   margin-left: 75px;
   margin-right: 75px;
   margin-bottom: 10px;
 }
 
 #video2 {
+  
   margin-right: 75px;
   margin-left: 75px;
   margin-bottom: 10px;
@@ -25,6 +33,7 @@ body {
 
 
 #iconbutton {
+  
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -33,14 +42,17 @@ body {
 }
 
 #iconbutton:hover {
+  
   opacity: 50%;
 }
 
 .firstline {
+  
   display:flex;
   
 }
 #vegan {
+  
   text-align: center;
   margin: .005px;
 }
@@ -48,15 +60,17 @@ body {
 
 
 #empty {
+  
   flex:80%;
   background-color:rgb(25, 85, 26);
   border: rgb(25, 85, 26);
 }
+
+
 #learn {
   flex: .00005%;
   background-color:black;
   color: white;
-  font-family: 'Varela', sans-serif;
   font-size: 15px;
   width: 100px;
   height: 55px;
@@ -66,7 +80,6 @@ body {
   flex: .00005%;
   background-color:black;
   color: white;
-  font-family:  'Varela', sans-serif;
   font-size: 15px;
   width: 100px;
   height: 55px;
@@ -74,7 +87,6 @@ body {
 
 .text {
   color: white;
-  font-family:  'Varela', sans-serif;
   font-size: 20px;
   display: flex;
   justify-content: center;
@@ -85,7 +97,7 @@ body {
 }
 #canyou {
   color: white;
-  font-family:  'Varela', sans-serif;
+  
   font-size: 20px;
   display: flex;
   justify-content: center;
@@ -94,7 +106,7 @@ body {
   
 }
 .clickers {
-  font-family:  'Varela', sans-serif;
+
   display: flex;
   justify-content: center;
   text-align: center;
@@ -102,11 +114,12 @@ body {
 
 .bighd {
   display: flex;
+ 
 }
 
 #hd {
   color: black;
-  font-family:  'Varela', sans-serif;
+  
   font-size: 20px;
   /* display: flex;
   justify-content: center; */
@@ -117,7 +130,7 @@ body {
 
 #eco {
   color: black;
-  font-family:  'Varela', sans-serif;
+  
   font-size: 20px;
   /* display: flex;
   justify-content: center;*/
@@ -127,6 +140,7 @@ body {
 
 #line {
   flex: 5%;
+  
 }
 
 #text1 {
@@ -136,6 +150,7 @@ body {
   font-size: 15px;
   
   
+  
 
 }
 #text2 {
@@ -143,22 +158,24 @@ body {
   margin: 10px;
   color: white;
   font-size: 15px;
+ 
 
 }
 
 #learnmore {
   color: white;
-  font-family:  'Varela', sans-serif;
+ 
   font-size: 20px;
   text-align: center;
   justify-content: center;
   margin: 20px;
-  background: black;
+ 
   
 }
 
 .displayco2 {
   color:white;
+  
   margin: 21px;
   font-size: 20px;
   justify-content: center;
@@ -168,15 +185,10 @@ body {
 
 .container{
   display: flex;
+  
   flex-direction: row;
   justify-content: center;
   border: white;
   margin: 20;
 
-}
-
-@font-face {
-  font-family:  'Varela', sans-serif;
-  src: url ('https://fonts.googleapis.com/css?family=Varela&display=swap')
- 
 }
