--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,16 @@
+@media only screen and (max-width: 500px) {
+  .container {
+    display: block !important; 
+  }
+
+  .iframe{
+    width: 300px !important;
+    height: 181px !important;
+  }
+}
 
 body {
-  background-color:rgb(25, 85, 26);
+
   font-family: 'Arimo', sans-serif;
 }
 
@@ -9,28 +19,70 @@ button {
 }
 
 #profilepage {
-  
   border: solid white;
 }
-#firstline {
-  
-  border: solid white;
+.firstline {
+  background: rgba(25, 85, 26, 0.5);
+  box-shadow: 5px 5px 20px #888888;
+  width: 100%;
+  /* display:flex; */
+  z-index: 0;
+  height: 55px;
+   /* background-color:rgb(25, 85, 26);
+   opacity: 0.5; */
 }
 
-#video {
-  
-  margin-left: 75px;
+
+#learn {
+  /* background-color:black; */
+  /* color: white; */
+  font-size: 15px;
+  width: 100px;
+  height: 55px;
+  z-index: 1;
+  opacity: 1;
+  border: none;
+  float: right;
+  background: none;
+}
+#chrome {
+  /* background-color:black; */
+  /* color: white; */
+  font-size: 15px;
+  width: 150px;
+  height: 55px;
+  z-index: 100;
+  opacity: 1;
+  border: none;
+  float: right;
+  background: none;
+}
+
+#vegan {
+  background-color:rgb(25, 85, 26);
+  text-align: center;
+  padding: 10%;
+}
+
+.container{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin: 5%;
+  margin-bottom: 10%;
+}
+
+.video {
+  margin: 5%;
+  text-align: center;
+  /* margin-left: 75px;
   margin-right: 75px;
-  margin-bottom: 10px;
+  margin-bottom: 10px; */
 }
-
-#video2 {
-  
-  margin-right: 75px;
-  margin-left: 75px;
-  margin-bottom: 10px;
+.iframe{
+  width: 520px; 
+  height: 315px;
 }
-
 
 #iconbutton {
   
@@ -46,100 +98,46 @@ button {
   opacity: 50%;
 }
 
-.firstline {
-  
-  display:flex;
-  
-}
-#vegan {
-  
-  text-align: center;
-  margin: .005px;
-}
 
-
-
-#empty {
-  
-  flex:80%;
-  background-color:rgb(25, 85, 26);
-  border: rgb(25, 85, 26);
-}
-
-
-#learn {
-  flex: .00005%;
-  background-color:black;
-  color: white;
-  font-size: 15px;
-  width: 100px;
-  height: 55px;
-
-}
-#chrome {
-  flex: .00005%;
-  background-color:black;
-  color: white;
-  font-size: 15px;
-  width: 100px;
-  height: 55px;
-}
 
 .text {
   color: white;
-  font-size: 20px;
+  font-size: 30px;
   display: flex;
   justify-content: center;
   text-align: center;
-  
   /* height: 55px; */
   
 }
 #canyou {
-  color: white;
+  color: black;
+  font-size: 20px;
+  justify-content: center;
+  /* height: 55px; */
+  display: block;
+}
+
+.displayco2 {
+  color: black;
+  
   
   font-size: 20px;
-  display: flex;
-  justify-content: center;
-  margin: .01px;
-  /* height: 55px; */
-  
-}
-.clickers {
-
-  display: flex;
   justify-content: center;
   text-align: center;
+}
+
+.clickers {
+  justify-content: center;
+  text-align: center;
+  margin-bottom: 15%;
 }
 
 .bighd {
   display: flex;
- 
-}
-
-#hd {
-  color: black;
-  
-  font-size: 20px;
-  /* display: flex;
-  justify-content: center; */
-  text-align: center;
-  flex:50%;
-}
-
-
-#eco {
-  color: black;
-  
-  font-size: 20px;
-  /* display: flex;
-  justify-content: center;*/
-  text-align: center; 
-  flex:50%;
 }
 
 #line {
-  flex: 5%;
+  display: block;
   
 }
 
@@ -148,47 +146,27 @@ button {
   margin: 10px;
   color: white;
   font-size: 15px;
-  
-  
-  
-
 }
+
 #text2 {
   background: black;
   margin: 10px;
   color: white;
   font-size: 15px;
- 
-
 }
 
 #learnmore {
   color: white;
- 
+  background-color:rgb(25, 85, 26);
   font-size: 20px;
-  text-align: center;
+  /* text-align: center; */
   justify-content: center;
-  margin: 20px;
+  padding: 10%;
  
   
 }
 
-.displayco2 {
-  color:white;
-  
-  margin: 21px;
-  font-size: 20px;
-  justify-content: center;
-  text-align: center;
-}
 
 
-.container{
-  display: flex;
-  
-  flex-direction: row;
-  justify-content: center;
-  border: white;
-  margin: 20;
 
-}
+
